UIKit으로 Main feed 구상

--- a/MyscoreIs_iOS/MyscoreIs_iOS/Base.lproj/Main.storyboard
+++ b/MyscoreIs_iOS/MyscoreIs_iOS/Base.lproj/Main.storyboard
@@ -1,24 +1,122 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Main View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="MainViewController" id="BYZ-38-t0r" customClass="MainViewController" customModule="MyscoreIs_iOS" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="46B-pD-80R">
+                                <rect key="frame" x="0.0" y="59" width="393" height="759"/>
+                                <color key="backgroundColor" systemColor="systemIndigoColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="dkK-8f-dHW">
+                                    <size key="itemSize" width="393" height="215"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="FeedCell" id="C4v-3f-Etq" customClass="FeedCell" customModule="MyscoreIs_iOS" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="393" height="215"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="pij-eK-MdB">
+                                            <rect key="frame" x="0.0" y="0.0" width="393" height="215"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="이름" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wsO-Az-srh">
+                                                    <rect key="frame" x="30" y="40" width="31.333333333333329" height="21.666666666666671"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                                    <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="글제목" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qTM-AN-v7I">
+                                                    <rect key="frame" x="95" y="39" width="47" height="25"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="25" id="3sG-aq-OJT"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
+                                                    <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="카테고리" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="juX-It-0sd">
+                                                    <rect key="frame" x="251" y="40" width="52" height="18"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                    <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="점수" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GjM-lO-tcd">
+                                                    <rect key="frame" x="333" y="39" width="26" height="18"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                    <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="글내용" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C4N-hg-SDZ">
+                                                    <rect key="frame" x="95" y="94" width="44.333333333333343" height="20.333333333333329"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <constraints>
+                                                <constraint firstItem="C4N-hg-SDZ" firstAttribute="leading" secondItem="pij-eK-MdB" secondAttribute="leading" constant="95" id="1fN-EV-Udd"/>
+                                                <constraint firstItem="juX-It-0sd" firstAttribute="top" secondItem="pij-eK-MdB" secondAttribute="top" constant="40" id="Ika-Qg-fbQ"/>
+                                                <constraint firstItem="juX-It-0sd" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="qTM-AN-v7I" secondAttribute="trailing" constant="50" id="Nn0-hU-74i"/>
+                                                <constraint firstItem="wsO-Az-srh" firstAttribute="top" secondItem="pij-eK-MdB" secondAttribute="top" constant="40" id="Ob7-05-S66"/>
+                                                <constraint firstItem="qTM-AN-v7I" firstAttribute="top" secondItem="pij-eK-MdB" secondAttribute="top" constant="39" id="XGr-7r-YAq"/>
+                                                <constraint firstAttribute="trailing" secondItem="GjM-lO-tcd" secondAttribute="trailing" constant="34" id="Xui-Dr-djY"/>
+                                                <constraint firstItem="wsO-Az-srh" firstAttribute="leading" secondItem="pij-eK-MdB" secondAttribute="leading" constant="30" id="cLX-Ua-TJ2"/>
+                                                <constraint firstItem="C4N-hg-SDZ" firstAttribute="top" secondItem="qTM-AN-v7I" secondAttribute="bottom" constant="30" id="fkJ-LS-IA4"/>
+                                                <constraint firstItem="GjM-lO-tcd" firstAttribute="leading" secondItem="juX-It-0sd" secondAttribute="trailing" constant="30" id="gah-3s-dq9"/>
+                                                <constraint firstItem="GjM-lO-tcd" firstAttribute="top" secondItem="pij-eK-MdB" secondAttribute="top" constant="39" id="jyb-FA-62T"/>
+                                                <constraint firstItem="qTM-AN-v7I" firstAttribute="leading" secondItem="wsO-Az-srh" secondAttribute="trailing" constant="33.666666666666671" id="kI5-nS-rCD"/>
+                                            </constraints>
+                                        </collectionViewCellContentView>
+                                        <color key="backgroundColor" systemColor="systemIndigoColor"/>
+                                        <size key="customSize" width="393" height="215"/>
+                                        <connections>
+                                            <outlet property="categoryLabel" destination="juX-It-0sd" id="wrc-P7-pSg"/>
+                                            <outlet property="descriptionLabel" destination="C4N-hg-SDZ" id="6HG-W5-3By"/>
+                                            <outlet property="nameLabel" destination="wsO-Az-srh" id="xK8-mf-vAD"/>
+                                            <outlet property="pointLabel" destination="GjM-lO-tcd" id="UeT-Mu-MUG"/>
+                                            <outlet property="titleLabel" destination="qTM-AN-v7I" id="JV8-Hn-Y8T"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemIndigoColor"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="46B-pD-80R" secondAttribute="bottom" id="HAB-nC-uen"/>
+                            <constraint firstItem="46B-pD-80R" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Oqz-e7-b6d"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="46B-pD-80R" secondAttribute="trailing" id="S1Z-P8-wYV"/>
+                            <constraint firstItem="46B-pD-80R" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="mfR-w8-X6D"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="collectionView" destination="46B-pD-80R" id="7Ap-YO-AiG"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="63.358778625954194" y="-34.507042253521128"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemIndigoColor">
+            <color red="0.34509803921568627" green="0.33725490196078434" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
